	 in the Pentagon 512 code.
20080318 disk/disk.c: fix for CPC images to pad every 128 byte length sector to
         256 bytes immediately after the sector data (128xE5 + 128x00;
         128xE5+128x00; ...  128xE5+128x00), so every sector uses 256 data
         bytes (part of patch #1882836) (Gergely Szasz).
20080318 machines/{pentagon.c,pentagon1024.c,pentagon512.c,scorpion.c,
	 spec128.[ch],spec16.c,spec48.c,spec_se.c,specplus2.c,specplus2a.c,
	 specplus3.[ch],specplus3e.c,tc2048.c,tc2068.[ch],ts2068.c},spectrum.c,
	 spectrum.h: refactor floating bus code, including removing
	 Pentagon 512 floating bus.
20080319 roms/{plus3e-0.rom,roms/plus3e-1.rom,roms/plus3e-2.rom}: update to
         v1.35 of the +3e ROMs (Fred).
20080321 machine.[ch],settings.dat,ui/options.dat,unittests/unittests.c:
	 add --late-timings option to emulate machines with 1 tstate later
	 timings.
20080322 periph.c: implement the "write back" that occurs with any bytes read
	 from port 0x7ffd on the 128/+2 (thanks, Marat Fayzullin).
20080322 windres.rc,ui/win32/{rollback.h.{c,h,rc},win32ui.c,Makefile.am}:
	 Win32: Implementation of the Rollback dialog (Marek).
20080324 disk/disk.c: fix for bytes per track settings in auto density
         selection code (part of patch #1882836) (Gergely Szasz).
20080324 disk/disk.c: add additional handling for fake sectors (part of patch
         #1882836) (Gergely Szasz).
20080325 disk/disk.[ch]: add support for disks with eak sectors that are longer
         than 6144 bytes (primarily Coin Op Hits with 6500 bytes per track)
         (part of patch #1882836) (Gergely Szasz).
20080325 README,Makefile.am,configure.in,
         disk/{Makefile.am,upd_fdc.[ch]},event.[ch]},machine.c,
         machines/{specplus3.[ch],specplus3e.c},man/fuse.1,menu.c,
         menu_data.dat,ui.c,ui/ui.h,utils.c: replace lib765 and libdsk with
         new upd765 FDC emulation for +3 (remainder of patch #1882836)
         (thanks, Mark Woodmass) (Gergely Szasz).